--- a/customRangeSlider/customSlider.css
+++ b/customRangeSlider/customSlider.css
@@ -22,8 +22,12 @@ body {
 h2 {
     position: absolute;
     top: 10px;
-    font-size: 37px;
+    font-size: 42px;
     color: #BD3246;
+    background: #740021;
+    border: #fff solid 4px;
+    border-radius: 7px;
+    padding: 22px;
 }
 
 .range-container {
@@ -43,13 +47,14 @@ input[type='range']:focus {
 input[type='range'] + label {
     background-color: #fff;
     position: absolute;
-    top: -25px;
+    top: -55px;
     left: 110px;
     width: 80px;
-    padding: 5px 0;
+    padding: 10px 0;
     text-align: center;
+    font-size: 20px;
     border-radius: 4px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 }
 
 /* Styling for Google Chrome and Safari only */
