--- a/customRangeSlider/customSlider.css
+++ b/customRangeSlider/customSlider.css
@@ -34,6 +34,11 @@ h2 {
     position: relative;
 }
 
+.range-wrapper {
+    background: black;
+    padding: 0 27px;
+}
+
 input[type='range'] {
     width: 300px;
     margin: 18px 0;
@@ -60,7 +65,7 @@ input[type='range'] + label {
 /* Styling for Google Chrome and Safari only */
 input[type='range']::-webkit-slider-runnable-track {
     background: #8D0033;
-    border-radius: 4px;
+    border-radius: 2px;
     width: 100%;
     height: 14px;
     cursor: pointer;
