--- a/netflixNav/netflixNav.css
+++ b/netflixNav/netflixNav.css
@@ -1,17 +1,25 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Lemon&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Fjalla One', sans-serif;
+    background-color: #FFA900;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+.text {
+    text-transform: uppercase;
+}
+
+.logo {
+    width: 200px;
 }
