--- a/netflixNav/netflixNav.css
+++ b/netflixNav/netflixNav.css
@@ -23,3 +23,25 @@ body {
 .logo {
     width: 200px;
 }
+
+.nav-btn {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.open-btn {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+}
+
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    transform: translateX(-100%);
+    
+}
