--- a/quizApp/quizApp.css
+++ b/quizApp/quizApp.css
@@ -1,17 +1,55 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@500&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Assistant', sans-serif;
+    background-color: #A0C1B8;
     display: flex;
+    color: #351F39;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+.quiz-container {
+    background-color: #726A95;
+}
+
+.quiz-header {
+    padding: 4rem;
+}
+
+h2 {
+    padding: 1rem;
+}
+
+#submit {
+    background-color: #719FB0;
+    font-size: 17px;
+    padding:10px 20px;
+    border-radius: 7px;
+    margin: 5px;
+    outline: none;
+    border-style: none;
+    cursor: pointer;
+}
+
+#submit:hover {
+    color: white;
+    background-color: #351F39;
+    transform: scale(1.17);
+}
+
+.quiz-header {
+    padding: 4rem;
+}
+
+h2 {
+    padding: 1rem;
 }
