--- a/quizApp/quizApp.css
+++ b/quizApp/quizApp.css
@@ -28,6 +28,11 @@ h1 {
     background-color: #719FB0;
 }
 
+h1 i {
+    font-size: 40px;
+    padding: 5px ;
+}
+
 .quiz-container {
     background-color: #726A95;
     border-radius: 10px;
