--- a/testimonialBox/testimonialBox.css
+++ b/testimonialBox/testimonialBox.css
@@ -1,12 +1,13 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Barlow Condensed', sans-serif;
+    background-color: #ECECEC;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,4 +15,22 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
+    padding: 10px;
+}
+
+.testimonial-container {
+    background-color: #30475E;
+    color: white;
+    border-radius: 7px;
+    margin: 20px auto;
+    padding: 50px 80px;
+    max-width: 768px;
+    position: relative;
+}
+
+.fa-quote {
+    color: rgba(255, 255, 255 0.3);
+    font-size: 28px;
+    position: absolute;
+    top: 70px;
 }
