--- a/testimonialBox/testimonialBox.css
+++ b/testimonialBox/testimonialBox.css
@@ -21,7 +21,7 @@ body {
 .testimonial-container {
     background-color: #30475E;
     color: white;
-    border-radius: 7px;
+    border-radius: 11px;
     margin: 20px auto;
     padding: 50px 80px;
     max-width: 768px;
@@ -33,4 +33,27 @@ body {
     font-size: 28px;
     position: absolute;
     top: 70px;
+}
+
+.fa-quote-right {
+    right: 40px;
+}
+
+.fa-quote-left {
+    left: 40px;
+}
+
+.tesimonial {
+    line-height: 28px;
+    text-align: justify;
+}
+
+@media(max-width: 768px) {
+    .testimonial-container {
+        padding: 20px 30px;
+    }
+
+    .fa-quote{
+        display: none;
+    }
 }
