--- a/testimonialBox/testimonialBox.css
+++ b/testimonialBox/testimonialBox.css
@@ -48,6 +48,26 @@ body {
     text-align: justify;
 }
 
+.user {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.user .user-image {
+    border-radius: 50%;
+    height: 95px;
+    width: 95px;
+    margin: 10px;
+    object-fit: cover;
+    border: solid 2px #F2A365;
+}
+
+.user .role  {
+    font-weight: normal;
+    margin: 7px 0;
+}
+
 @media(max-width: 768px) {
     .testimonial-container {
         padding: 20px 30px;
