--- a/toDoList/style.css
+++ b/toDoList/style.css
@@ -27,4 +27,14 @@ h1 {
 form {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     max-width: 100%;
+    width: 400px;
+}
+
+.input {
+    border: none;
+    color: #444;
+    font-size: 2rem;
+    padding: 1rem 2rem;
+    display: block;
+    width: 100%;
 }
