--- a/toDoList/style.css
+++ b/toDoList/style.css
@@ -38,3 +38,27 @@ form {
     display: block;
     width: 100%;
 }
+
+.input::placeholder {
+    color: #CEE6B4;
+
+}
+
+.todos {
+    background-color: #fff;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.todos li {
+    border-top: 1px solid #e5e5e5;
+    cursor: pointer;
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+}
+
+.todos li.completed {
+    color: #b6b6b6;
+    text-decoration: line-through;
+}
