--- a/toDoList/style.css
+++ b/toDoList/style.css
@@ -41,7 +41,10 @@ form {
 
 .input::placeholder {
     color: #CEE6B4;
+}
 
+input:focus {
+    outline-color: #9B3675;
 }
 
 .todos {
@@ -61,4 +64,12 @@ form {
 .todos li.completed {
     color: #b6b6b6;
     text-decoration: line-through;
+}
+
+small {
+    color: #b5b5b5;
+    margin-top: 3rem;
+    padding-bottom: 3rem;
+    text-align: center;
+    
 }
