--- a/toDoList/style.css
+++ b/toDoList/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 h1 {
-    color: #9B3675;
+    color: #9c4b7d;
     font-size: 10rem;
     text-align: center;
     opacity: 0.8;
@@ -34,7 +34,7 @@ form {
     border: none;
     color: #444;
     font-size: 2rem;
-    padding: 1rem 2rem;
+    padding: .5rem 2rem;
     display: block;
     width: 100%;
 }
@@ -67,9 +67,8 @@ input:focus {
 }
 
 small {
-    color: #b5b5b5;
+    color: #975b80;
     margin-top: 3rem;
     padding-bottom: 3rem;
     text-align: center;
-    
 }
