--- a/insectCatchGame/style.css
+++ b/insectCatchGame/style.css
@@ -14,6 +14,13 @@ body {
     margin: 0;
 }
 
+h1 {
+    color: #6F9EAF;
+    margin: 15px, 20px;
+    background-color: #A9294F;
+
+}
+
 .btn {
     border: 0;
     padding: 20px;
@@ -37,6 +44,10 @@ body {
     justify-content: center;
     height: 100vh;
     width: 100vw;
+}
+
+.screen.up {
+    margin-top: -100vh;
 }
 
 .choose-insect-btn img {
