--- a/insectCatchGame/style.css
+++ b/insectCatchGame/style.css
@@ -49,7 +49,7 @@ h1 {
 }
 
 .screen.up {
-    margin-top: -100vh;
+    margin-top: -200vh;
 }
 
 .insects-list {
@@ -70,15 +70,19 @@ h1 {
     height: 150px;
 }
 
+.insects-list li {
+    margin: 10px;
+}
+
 .choose-insect-btn:hover {
     background-color: rgb(241, 241, 232);
     color: #6F9EAF;
 }
 
-.insects-list li {
-    margin: 10px;
-}
 
+.choose-insect-btn:active {
+    background-color: rgba(255, 255, 255, .75);
+}
 .choose-insect-btn img {
     width: 100px;
     height: 100px;
