--- a/insectCatchGame/style.css
+++ b/insectCatchGame/style.css
@@ -106,3 +106,22 @@ h1 {
     right: 20px;
 }
 
+.message {
+    line-height: 1.7;
+    background-color: white;
+    width: 100%;
+    padding: 20px;
+    z-index: 100;
+    text-align: center;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -150%);
+    transition: transform 0.4s ease-in;
+}
+
+.message.visible {
+    transform: translate(-50%, 150%);
+    opacity: 1;
+} 
