--- a/insectCatchGame/style.css
+++ b/insectCatchGame/style.css
@@ -130,7 +130,21 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 200px;
+    left: 600px;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.insect.caught {
+    transform: translate(-50%, -50%) scale(0);
+}
+
+.insect img {
     width: 100px;
     height: 100px;
 }
-
