--- a/passwordGenerator/password.css
+++ b/passwordGenerator/password.css
@@ -102,12 +102,20 @@ h2 {
 
 span {
     white-space: nowrap;
+    position: absolute;
 
 }
 
-.toggle {
-    visibility: hidden;
-}
+ .toggle {
+  position: absolute;
+  opacity: 70;
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+  color: black;
+  /* height: 0;
+  width: 0; */
+} 
 
 .label {
     position: relative;
@@ -115,7 +123,7 @@ span {
     border-radius: 50px;
     cursor: pointer;
     display: inline-block;
-    margin-left: 140px;
+    margin-left:320px;
     width: 60px;
     height: 20px;
 }
