--- a/3DBackgroundSquares/style.css
+++ b/3DBackgroundSquares/style.css
@@ -1,6 +1,9 @@
 /*Importing Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -14,4 +17,19 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+.magic {
+    background-color: #F05454;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    border: 0;
+    border-radius: 3px;
+    font-size: 16px;
+    padding: 12px 20px;
+    cursor: pointer;
+    position: fixed;
+    top: 20px;
+    letter-spacing: 1px;
+    box-shadow: 0 3px rgba(191, 191, 191, 0.7);
 }
