--- a/3DBackgroundSquares/style.css
+++ b/3DBackgroundSquares/style.css
@@ -47,8 +47,15 @@ body {
 .boxes {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
     height: 500px;
     width: 500px;
+    position: relative;
+}
+
+.boxes.big {
+    width: 600px;
+    height: 600px;
 }
 
 .box {
